Initial Van-der-Pol translation

--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -8,63 +8,60 @@
   vdp: ASAU-16, 17(alt), ITMM-2011
 }
 
-\subsection{Определение системы и анализ её динамики} %  % {{{2 _vdp_task
+\subsection{Визначення системи та аналіз її динаміки} %{{{2 vdp_task
 
-% TODO: dyn_sys_chaos, chaos_in_phase_dyn_VDP_modul_dobr.pdf buffer_phemon_vdp
-
-Модель нелинейной автоколебательной системы Ван-Дер-Поля~(\ref{atu:eq:vdp})
-широко используется при исследовании динамики
-колебательных систем, в которых происходит восполнение
-энергии системы из внешнего источника~\cite{Ginoux2012VanDP,anisch_nonlin_eff,magni_theory_dyn_chaos,atu_asau16,atu_st75,chulichkcov_mm_ml_dyn}:
+Модель нелінійної автоколивальній системи
+Ван-Дер-Поля~(\ref{atu:eq:vdp}) широко використовується при дослідженні
+динаміки коливальних систем, в яких відбувається поповнення
+енергії системи з зовнішнього джерела~\cite{Ginoux2012VanDP,anisch_nonlin_eff,magni_theory_dyn_chaos,atu_asau16,atu_st75,chulichkcov_mm_ml_dyn}:
 %
 \begin{equation}
  \ddot{x} - \varepsilon (1-x^2)  \dot{x} + \Omega_0^2 x  = u(t) .
 \label{atu:eq:vdp}
 \end{equation}
 \noindent
-где
-\(x(t)\) -- координата колебаний,
-\( \varepsilon \) -- параметр, определяющий получение
-  энергии системой,
-\( \Omega_0 \) -- собственная частота при \( \varepsilon = 0 \),
-\(u(t)\) -- внешнее возмущающее воздействие.
+де
+\(x(t)\) --- координата коливань,
+\(\varepsilon \) --- параметр, що визначає отримання енергії системою,
+\(\Omega_0 \) --- власна частота при \(\varepsilon= 0 \),
+\( u (t) \) --- зовнішнє вплив, що збурює.
 
-При \( \varepsilon > 0 \) и \( u(t) = 0 \)
-рассматриваемая система реализует режим автоколебаний
-с постоянной частотой, зависящей от \( \varepsilon \):
+При \(\varepsilon> 0 \) і \(u (t) = 0 \) розглянута система реалізує режим
+автоколивань з постійною частотою, яка залежить від \(\varepsilon \):
 %
 \begin{equation}
 \Omega \approx \Omega_0 \sqrt{ 1 - \left( \frac{\varepsilon}{2 \Omega_0} \right)^2 }.
 \label{atu:eq:vdp_Omega}
 \end{equation}
 
-При этом амплитуда колебаний остаётся практически постоянной,
-а сама форма колебаний принимает всё более нелинейный характер.
+При цьому амплітуда коливань залишається майже незмінною, а
+сама форма коливань приймає все більш нелінійний характер.
 
-Под воздействием входного гармонического сигнала
+Під впливом вхідного гармонійного сигналу
 \( u(t) = U_{in} \sin ( \omega_{in} t ) \)
-система~(\ref{atu:eq:vdp}) может проявлять регулярную, сложно-периодическую
-и хаотическую динамику~\cite{atu_itcs2011,atu_ISDMCI2011,gang_chaos_on_phase_noise,baranov_chaos_vdp,kuznetsov_phenomen_vdp,math5040070}.
+система~(\ref{atu:eq:vdp}) може проявляти регулярну, складно-періодичну
+і хаотичну динаміку~\cite{atu_itcs2011,atu_ISDMCI2011,gang_chaos_on_phase_noise,baranov_chaos_vdp,kuznetsov_phenomen_vdp,math5040070}.
 
-Идентифицируемый параметр \( \varepsilon \)
-характеризует поступление энергии в систему.
-При $x \approx 0$ членом с $x^2$ можно пренебречь,
-и нелинейность вырождается в ``отрицательное трение''.
-При больших амплитудах колебаний член с $x^2$
-начинает преобладать, там самым ограничивая рост амплитуды.
-Существует также система, именуемая системой Ван-дер-Поля-Дуффинга~\cite{landa_nonlin_vivro_waves},
-объединяющая свойства рассматриваемой системы и системы Дуффинга.
+Ідентифікований параметр \(\varepsilon \) характеризує надходження
+енергії у систему. При
+$ x \approx 0 $ членом з
+$ x ^ 2 $ можна знехтувати, і нелінійність вироджується в ``негативне тертя''.
+При великих амплітудах коливань член з
+$x^2$ починає переважати, там самим обмежуючи зростання
+амплітуди. Існує також система, яка має назву
+Ван-дер-Поля-Дуффінга~\cite{landa_nonlin_vivro_waves}, та об'єднує властивості
+даної системи і системи Дуффінга.
 
-При анализе численного моделирования системы~(\ref{atu:eq:vdp})
-следует осторожно относится к выводам о типе динамики,
-которые можно сделать, исходя из фазового или расширенного фазового портрета.
-Например, на рис.~\ref{atu:f:vdp_phase_f_reg},
-при условиях
-$ \varepsilon=1.50$, $U_{in}=0.3$, $\omega_{in}=0.27$
-на левом графике
-фазовая траектория получается плотной,
-однако спектр свидетельствует о регулярной динамике
-с ограниченным набором частот.
+При аналізі чисельного моделювання системи~(\ref{atu:eq:vdp})
+слід обережно ставиться до висновків про тип динаміки, які
+можна зробити, виходячи з фазового або розширеного фазового
+портрета.
+Наприклад, на рис.~\ref{atu:f:vdp_phase_f_reg}, за умов
+$ \varepsilon = 1.50 $,
+$ U_{in} = 0.3 $,
+$ \omega_{in} = 0.27 $ на лівому графіку фазова траєкторія виходить
+щільною, однак спектр свідчить про регулярну динаміку з
+обмеженим набором частот.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -72,19 +69,21 @@ $ \varepsilon=1.50$, $U_{in}=0.3$, $\omega_{in}=0.27$
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_fft-p_f_1x50_0x30_0x27.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы Ван-дер-Поля (\ref{atu:eq:vdp}) в режиме регулярных колебаний}
+\caption{Розширений фазовий портрет і спектр системи Ван-дер-Поля (\ref{atu:eq:vdp}) в режимі регулярних коливань}
 \label{atu:f:vdp_phase_f_reg}
 \end{figure}
 
-Непосредственно хаотические колебания этой системы часто характеризуются
-менее выраженной плотностью аттрактора. Тем не менее,
-участки сложного спектра (рис.~\ref{atu:f:vdp_phase_f_chaos})
-свидетельствуют в пользу хаоса.
-Данная иллюстрация соответствует условиям
-$ \varepsilon=2.65$, $U_{in}=1.2$, $\omega_{in}=0.27$.
-При этом малые изменения параметров, например
-снижение величины $\varepsilon$ до $2.5$
-приводит к реализации режима простых регулярных колебаний.
+Безпосередньо хаотичні коливання цієї системи часто
+характеризуються менш вираженою щільністю аттрактора. Проте,
+ділянки складного спектра (рис.~\ref{atu:f:vdp_phase_f_chaos}) свідчать на
+користь хаосу. Дана ілюстрація відповідає умовам
+$ \varepsilon = 2.65 $,
+$ U_{in} = 1.2 $,
+$ \omega_{in} = 0.27 $. При цьому малі зміни параметрів, наприклад зниження
+величини
+$ \varepsilon $ до
+$ 2.5 $ призводить до реалізації режиму простих регулярних
+коливань.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -92,21 +91,21 @@ $ \varepsilon=2.65$, $U_{in}=1.2$, $\omega_{in}=0.27$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_fft-p_f_2x65_1x20_0x27.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы Ван-дер-Поля (\ref{atu:eq:vdp}) в режиме хаотических колебаний}
+\caption{Розширений фазовий портрет і спектр системи Ван-дер-Поля (\ref{atu:eq:vdp}) в режимі хаотичних коливань}
 \label{atu:f:vdp_phase_f_chaos}
 \end{figure}
 
-Анализ спектра системы Ван-дер-Поля, как и многих других систем
-динамического хаоса, следует проводить, учитывая
-спектральное разрешение.
-Например, на  рис.~\ref{atu:f:vdp_phase_f_complex}
-представлены результаты моделирования системы при
-$ \varepsilon=4.8$, $U_{in}=0.7$, $\omega_{in}=0.7$.
-В спектре системы наблюдаются участки с очень близко
-расположенными пиками. При недостаточной разрешающей способности
-этот участок будет принят за зону сплошного спектра.
-Это может привести к выводу о хаотичности системы,
-тем более, если учесть вид аттрактора.
+Аналіз спектру системи Ван-дер-Поля, як і багатьох інших систем
+динамічного хаосу, слід проводити, враховуючи спектральну
+роздільну здатність. Наприклад, на рис.~\ref{atu:f:vdp_phase_f_complex} представлені
+результати моделювання системи при
+$ \varepsilon = 4.8 $,
+$ U_{in} = 0.7 $,
+$ \omega_{in} = 0.7 $. В спектрі системи спостерігаються ділянки з дуже
+близько розташованими піками. При недостатній роздільної
+здатності цю ділянку буде прийнято за зону суцільного
+спектру. Це може привести до помилкового висновку про хаотичність системи,
+особливо з врахуванням структури аттрактора.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -114,76 +113,75 @@ $ \varepsilon=4.8$, $U_{in}=0.7$, $\omega_{in}=0.7$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_fft-p_f_4x80_0x70_0x70.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы Ван-дер-Поля (\ref{atu:eq:vdp}) в режиме сложных регулярных колебаний}
+\caption{Розширений фазовий портрет і спектр системи Ван-дер-Поля (\ref{atu:eq:vdp}) в режимі складних регулярних коливань}
 \label{atu:f:vdp_phase_f_complex}
 \end{figure}
 
-
-% \begin{figure}[htb!]
-% \centerline{\includegraphics[width=0.5\textwidth]{p/cha/vdp_phase.pdf} }
-% \caption{Фазовый портрет системы Ван-дер-Поля (\ref{atu:eq:vdp})}
-% \label{atu:f:vdp_phase}
-% \end{figure}
-
-При анализе физических систем нет возможности произвольным образом
-задавать время измерения для получения спектра с требуемым разрешением.
-Более того, с учётом ограниченной точности измерений нет возможности
-точно определить показатели Ляпунова. Таким образом,
-вполне возможно существование систем, неотличимых от хаотических
-при проведении измерений, но не являющимися хаотическими в строгом понимании.
-Тем не менее, с точки зрения задачи идентификации,
-этот случай практически неотличим от реального хаоса, и требует
-применения соответствующих методов и критериев.
+При аналізі фізичних систем немає можливості довільним чином
+задавати час вимірювання для отримання спектра з необхідною
+роздільною здатністю. Більш того, з урахуванням обмеженої точності вимірів
+немає можливості точно визначити показники Ляпунова. Таким
+чином, цілком можливе існування систем, які не відрізняються
+від хаотичних при проведенні вимірювань, але не є хаотичними в
+строгому розумінні. Проте, з точки зору задачі ідентифікації,
+цей випадок практично не відрізняється від реального хаосу,
+і вимагає застосування відповідних методів і критеріїв.
 
 % }}}2
 
 
-\subsection{Анализ и выбор критериев}  % {{{2
+\subsection{Аналіз і вибір критеріїв}%{{{2
 
-В отличие от систем Лоренца, Рёсслера и им подобных,
-у системы Ван-дер-Поля есть только одна наблюдаемая величина: $x$.
-Это сразу сильно ограничивает круг критериев, требующих анализа.
+На відміну від систем Лоренца, Ресслера та їм подібних, у системи
+Ван-дер-Поля є тільки одна величина, що спостерігається: $x(t)$. Це
+відразу сильно обмежує коло критеріїв, які потребують аналізу.
 
-На первый взгляд, если доступен сигнал $x(t)$,
-то можно вычислить сигналы $\dot{x}(t)$ и $\ddot{x}(t)$.
-После этого, подставив получившиеся зависимости в (\ref{atu:eq:vdp}),
-можно получить значение идентифицируемого параметра.
-На самом деле, это возможно только в случае практически полного отсутствия помех.
-Даже небольшой  (0.001\%) уровень ошибок измерения
-при вычислении производных, особенно второй,
-приводит к совершенно произвольным результатам.
-Таким образом, и для этой системы без применения
-интегральных критериев нет возможности создать работоспособную систему идентификации.
+На перший погляд, якщо доступний сигнал
+$x(t)$, то можна обчислити сигнали
+$\dot{x}(t) $ і
+$\ddot{x}(t)$. Після цього, підставивши отримані залежності
+в (\ref{atu:eq:vdp}), можна отримати значення ідентифікованого
+параметра. Насправді, це можливо тільки в разі практично
+повної відсутності перешкод. Навіть невеликий (0.001\%) рівень
+помилок вимірювання при обчисленні похідних, особливо другої,
+призводить до абсолютно довільним результатам. Таким чином,
+для цієї системи без застосування інтегральних критеріїв
+немає можливості створити працездатну систему ідентифікації.
 
-Критерии $q_{x^2}$, $q_{rx}$ и $q_{|x|}$ отличаются
-для этой задачи непринципиально.
-Несмотря на то, что эти величины в данном конкретном случае не
-отображают какой-либо закон сохранения, их применение может быть оправданным~\cite{atu_asau17}.
-При росте параметра $\varepsilon$ система всё больше проявляет нелинейные свойства.
-Это выражается в том, что при одинаковой амплитуде сигнала
-зависимость $x(t)$ большую часть времени проводит вблизи
-амплитудных значений, что приводит к росту этих критериев.
-Для определённости в дальнейшем будем использовать $q_{x^2}$.
+Критерії
+$q_{x^2} $,
+$q_{rx} $ і
+$q_{|x|} $ відрізняються для цього завдання не
+принципово. Незважаючи на те, що ці величини в даному конкретному
+разі не відображають будь-якої закон збереження, їх застосування
+може бути виправданим~\cite{atu_asau17}. При зростанні параметра
+$ \varepsilon $ система все більше виявляє нелінійні властивості. Це
+виражається в тому, що при однаковій амплітуді сигналу
+залежність
+$x(t)$ більшу частину часу проводить у районі амплітудних
+значень, що призводить до зростання цих критеріїв. Для
+визначеності в подальшому будемо використовувати
+$q_{x^2}$.
 
-Также имеет смысл рассмотреть достаточно очевидный для
-колебательных систем критерий $q_T$,
-заключающийся в измерении ``периода''~\cite{atu_asau16}.
-Очевидно, что понятие периода для хаотических систем неприменимо.
-Однако, можно принять за текущее значение периода
-интервал времени между двумя последовательными срабатываниями
-правильно настроенного триггера Шмидта, на вход которого подаётся сигнал
-$x(t)$. Этот подход используется при построении входных
-цепей частотомеров. При этом автоматически происходит усреднение
-на интервалах порядка этого ``периода''. Однако,
-для систем идентификации такое усреднение скорее всего будет
-недостаточным, особенно в хаотических и сложно-периодических
-режимах. Следовательно, имеет смысл использовать дополнительное
-усреднение, например~(\ref{atu:eq:qlin}).
+Також має сенс розглянути досить очевидний для коливальних
+систем критерій
+$q_T$, що полягає у вимірюванні ``періоду''~\cite{atu_asau16}. Очевидно, що
+поняття періоду для хаотичних систем не можна застосовувати. Однак,
+можна прийняти за поточне значення періоду інтервал часу між
+двома послідовними спрацьовуваннями коректно налаштованого
+тригера Шмідта, на вхід якого подається сигнал
+$x(t)$. Цей підхід використовується при побудові вхідних
+ланцюгів частотомеров. При цьому автоматично відбувається
+усереднення на інтервалах порядку цього ``періоду''. Однак,
+для систем ідентифікації таке усереднення швидше за все
+буде недостатнім, особливо в хаотичних і складно-періодичних
+режимах. Отже, має сенс використовувати додаткове усереднення,
+наприклад~(\ref{atu:eq:qlin}).
 
-Рассмотрим характерные зависимости рассматриваемых критериев,
-полученные в результате моделирования динамики системы (\ref{atu:eq:vdp}).
-На  рис.~\ref{atu:f:vdp_q1} представлен вид этих зависимостей
-для различных условий.
+Розглянемо характерні залежності розглянутих критеріїв,
+отримані в результаті моделювання динаміки системи
+(\ref{atu:eq:vdp}). На рис.~\ref{atu:f:vdp_q1} представлений вид цих залежностей
+для різних умов.
 
 
 \begin{figure}[ht!]
@@ -192,33 +190,38 @@ $x(t)$. Этот подход используется при построени
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q-p_q_1x20_0x6283185.png}
 \end{center}
-  \caption{Зависимости $q_{x^2}(\varepsilon)$ и $q_T(\varepsilon) $ системы Ван-дер-Поля}
+\caption{Залежності $ q_{x ^ 2} (\varepsilon) $ і $ q_T (\varepsilon) $ системи Ван-дер-Поля}
 \label{atu:f:vdp_q1}
 \end{figure}
 
-Левый график соответствует такому набору параметров,
-при котором наблюдается периодическое и сложно-периодическое движение.
-При этом оба критерия подходят для синтеза системы идентификации, а
-критерий $q_T$ проявляет меньшую нелинейность.
-Правый график отображает случай, когда изменение параметра $\varepsilon$
-приводит к существенному изменению поведения.
-При $\varepsilon < 7 $ происходит ``захват частоты'',
-то есть возмущающий сигнал $u(t)$ ``навязывает'' свою частоту системе,
-что приводит к простой динамике и отсутствию зависимости $q_T$ от $\varepsilon$.
-Идентификация на данном участке невозможна, ввиду
-отсутствия влияния параметра на ``период''.
-Правая часть этого графика отображает постоянные переходы от
-сложных колебаний к хаосу и обратно. На зависимости $q_T(\varepsilon)$
-появляются изломы, что потенциально должно привести к снижению
-точности идентификации на фоне общей работоспособности.
-График зависимости $q_{x^2}(\varepsilon)$ имеет экстремальный характер,
-что позволяет использовать этот критерий только на тех диапазонах $\varepsilon$,
-на которых наблюдается монотонность.
+Лівий графік відповідає такому набору параметрів, при якому
+спостерігається періодичний і складно-періодичний рух. При цьому
+обидва критерії підходять для синтезу системи ідентифікації,
+а критерій $ q_T $ виявляє меншу нелінійність. Правий графік відображає
+випадок, коли зміна параметра
+$ \varepsilon $ призводить до істотної зміни поведінки. При
+$ \varepsilon <7 $ відбувається ``захоплення частоти'', тобто
+сигнал
+$u(t)$ ``нав'язує'' свою частоту системі, що призводить до простої
+динаміці і відсутності залежності
+$q_T$ від
+$ \varepsilon $ . Ідентифікація на даній ділянці неможлива, зважаючи на
+відсутність впливу параметра на ``період''. Права частина цього
+графіка відображає постійні переходи від складних коливань
+до хаосу і назад. На залежності
+$ q_T (\varepsilon) $ з'являються злами, що потенційно має привести
+до зниження точності ідентифікації на тлі загальної
+працездатності. Графік залежності
+$q_{x^2}(\varepsilon) $ має екстремальний характер, що дозволяє
+використовувати цей критерій тільки на тих діапазонах
+$ \varepsilon $, на яких спостерігається монотонність.
 
-Рассмотрим зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$
-для различных значений $\omega_{in}$.
-На  рис.~\ref{atu:f:vdp_q2_027}
-представлены эти зависимости при $\omega_{in}=0.27$.
+Розглянемо залежності
+$ q_T (\varepsilon, U_{in}) $ і
+$ q_{x ^ 2} (\varepsilon, U_{in}) $ для різних значень
+$ \omega_{in} $.
+На рис.~\ref{atu:f:vdp_q2_027} представлені ці залежності при
+$ \omega_{in} = 0.27 $.
 
 
 \begin{figure}[ht!]
@@ -227,25 +230,26 @@ $x(t)$. Этот подход используется при построени
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qx2_ome_0x27.png}
 \end{center}
-  \caption{Зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=0.27$}
+  \caption{Залежності $q_T(\varepsilon,U_{in})$ та $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=0.27$}
 \label{atu:f:vdp_q2_027}
 \end{figure}
 
-При высоких значениях $U_{in}$ происходит захват частоты,
-график зависимости $q_T(\varepsilon,U_{in})$ в этой области
-представляет собой плоскую поверхность, что свидетельствует
-о неприменимости критерия в этих условиях. При малых значения $U_{in}$,
-наоборот, наблюдается достаточно близкая к линейной зависимость.
-В промежутке между двумя этими областями возможности
-идентификации с использованием данного критерия существуют, но ограничены.
-Критерий $q_{x^2}$ при этих же условиях имеет несколько другие ограничения.
-Идентификация затруднена в области ``оврага'', который соответствует
-переходному режиму на предыдущем графике.
-Как в области низких, так и в области высоких значений
-$U_{in}$ идентификация возможна.
+При високих значеннях
+$ U_{in} $ відбувається захоплення частоти, графік залежності
+$ q_T (\varepsilon, U_{in}) $ в цій області є плоску поверхню, що свідчить
+про непридатність критерію в цих умовах. При малих значення
+$ U_{in} $, навпаки, спостерігається досить близька до лінійної
+залежність. У проміжку між двома цими областями можливості
+ідентифікації з використанням даного критерію існують, але
+обмежені. Критерій
+$q_{x^2} $ при цих же умовах має дещо інші обмеження. Ідентифікація
+утруднена в області ``яру'', який відповідає перехідному режиму
+на попередньому графіку. Як в області низьких, так і в області
+високих значень
+$ U_{in} $ ідентифікація можлива.
 
-На  рис.~\ref{atu:f:vdp_q2_120}
-представлены поверхности критериев при $\omega_{in}=1.2$.
+На рис.~\ref{atu:f:vdp_q2_120} представлені поверхні критеріїв при
+$ \omega_{in} = 1.2 $.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -253,46 +257,46 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qx2_ome_1x20.png}
 \end{center}
-  \caption{Зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=1.2$}
+  \caption{Залежності $q_T(\varepsilon,U_{in})$ та $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=1.2$}
 \label{atu:f:vdp_q2_120}
 \end{figure}
 
-На зависимости $q_T(\varepsilon,U_{in})$ в этом случае также виден
-плоский участок, соответствующий режиму захвата частоты.
-Но большая часть этой зависимости свидетельствует о том, что
-идентификация возможна, и при этом скорее всего
-будет наблюдаться увеличение ошибки идентификации из-за неравномерности графика.
-Напротив, зависимость $q_T(\varepsilon,U_{in})$ проявляет
-мультимодальный характер, что позволяет проводить идентификацию только в узких диапазонах.
+На залежності
+$ q_T (\varepsilon, U_{in}) $ в цьому випадку також видно плоску ділянку,
+що відповідає режиму захоплення частоти. Але більша частина
+цієї залежності свідчить про те, що ідентифікація можлива,
+і при цьому швидше за все буде спостерігатися збільшення
+похибки ідентифікації через нерівномірність графіка. Навпаки,
+залежність
+$ q_T (\varepsilon, U_{in}) $ проявляє мультимодальний характер, що дозволяє
+проводити ідентифікацію тільки у вузьких діапазонах.
 
-Таким образом, установлено, что ни один из рассматриваемых критериев не
-обеспечивает возможность идентификации при любых значениях параметров.
-Однако, наибольший диапазон работоспособности продемонстрировал критерий $q_{T}$.
-Он и будет использован в дальнейших исследованиях. При этом при постановке задачи
-будем избегать режимов, на которых происходит захват частоты.
-
-
-
-
-
-
-
-
+Таким чином, встановлено, що жоден з розглянутих критеріїв не
+забезпечує можливість ідентифікації при будь-яких значеннях
+параметрів. Однак, найбільший діапазон працездатності
+продемонстрував критерій
+$q_{T}$. Він і буде використаний в подальших дослідженнях. При
+цьому при постановці завдання будемо уникати режимів, на яких
+відбувається захоплення частоти.
 
 % }}}2
 
-\subsection{Тестовая задача идентификации для системы Ван-дер-Поля}  % {{{2
+\subsection{Тестова задача ідентифікації для системи Ван-дер-Поля} % {{{2
 
-При синтеза системы идентификации использовалась группа методов ``ql3rlWvnAAW''.
-С учётом выбора критерия $q_{T}$ при постановке задачи идентификации
-параметры выбирались с учётом диапазона работоспособности этого критерия.
-Первая группа значений параметров: $U_{in}=0.3$, $\omega_{in}=0.27$, $ \varepsilon \in [1, 4 ]$.
+При синтезу системи ідентифікації використовувалася група
+методів ``ql3rlWvnAAW''. З урахуванням вибору критерію
+$ q_{T} $ при постановці задачі ідентифікації параметри
+вибиралися з урахуванням діапазону працездатності цього
+критерію. Перша група значень параметрів:
+$ U_{in} = 0.3 $,
+$ \omega_{in} = 0.27 $,
+$ \varepsilon \in [1, 4]$.
 
-Рассмотрим процесс идентификации
-в квазистационарном случае,
-при медленном изменении параметра~(\ref{atu:eq:po_t_ramp}), $p_0=1$, $U_p=2$.
-Динамика агентов и различных способов задания $p_\mathrm{id}$
-представлена на рис.~\ref{atu:f:vdp_id1_ramp}.
+Розглянемо процес ідентифікації в квазістаціонарному випадку,
+при повільної зміні параметра~(\ref{atu:eq:po_t_ramp}),
+$ p_0 = 1 $,
+$ U_p = 2 $. Динаміка агентів і різних способів завдання
+$ p_\mathrm{id} $ представлена на рис.~\ref{atu:f:vdp_id1_ramp}.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -300,24 +304,27 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_ramp.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_ramp})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ван-дер-Поля за умови (\ref{atu:eq:po_t_ramp})}
 \label{atu:f:vdp_id1_ramp}
 \end{figure}
 
-За исключением начального участка, на котором происходит стабилизация
-состояния самой системы идентификации, агенты демонстрируют корректное поведение,
-сопровождая медленно изменяющиеся значение параметра $\varepsilon$.
-Как следствие, все методы определения $p_\mathrm{id}$
-позволяют достаточно точно провести идентификацию.
-Небольшие колебания обусловлены тем, что на самом деле
-система не в полной мере может быть названа квазистационарной,
-из-за большого времени усреднения критерия.
-Участков, на которых нарушался бы процесс идентификации,
-или же существенно росла ошибка, не наблюдается.
+За винятком початкової ділянки, на якої відбувається
+стабілізація стану самої системи ідентифікації, агенти
+демонструють коректну поведінку, супроводжуючи значення параметра
+$ \varepsilon $, яке повільно змінюється.
+Як наслідок, всі методи визначення
+$ p_\mathrm{id} $ дозволяють досить точно провести
+ідентифікацію. Невеликі коливання обумовлені тим, що насправді
+система не в повній мірі може бути названа квазістаціонарною,
+через великий часу усереднення критерію. Ділянок, на яких
+порушувався б процес ідентифікації, або ж істотно зросла
+похибка, не спостерігається.
 
-Рассмотрим динамку процесса идентификации
-(рис.~\ref{atu:f:vdp_id1_sign})
-при условиях (\ref{atu:eq:po_t_sign}), $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$.
+Розглянемо динамку процесу ідентифікації (рис.~\ref{atu:f:vdp_id1_sign})
+при умовах (\ref{atu:eq:po_t_sign}),
+$ p_0 = 2 $,
+$ U_p = 0.8 $,
+$ \omega_{in} = 0.01047 $.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -325,21 +332,21 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_sign.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_sign})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ван-дер-Поля за умови (\ref{atu:eq:po_t_sign})}
 \label{atu:f:vdp_id1_sign}
 \end{figure}
 
-Как уже наблюдалось, все методы определения $p_\mathrm{id}$
-на уровне координатора поиска дают схожие результаты.
-Следует отметить заметные колебания на первой половине периода изменения
-параметра, по сравнению с третей. Избыточные колебания на начальном этапе можно
-уменьшить путём предварительной настройки элементов усреднения критерия.
-Однако, для такой настройки необходима дополнительная информация,
-которая неизвестна a priori.
+Як вже спостерігалося, усі методи визначення
+$ p_\mathrm{id} $ на рівні координатора пошуку дають схожі
+результати. Слід зазначити помітні коливання на першій половині
+періоду зміни параметра, в порівнянні з третім. Надмірні
+коливанням на початковому етапі можна зменшити шляхом
+попередньої настройки елементів усереднення критерію. Однак,
+для такого налаштування необхідна додаткова інформація, яка
+невідома a priori.
 
-На рис.~\ref{atu:f:vdp_id1_sin}
-представлены аналогичные результаты,
-но в случае плавного изменения параметра~(\ref{atu:eq:po_t_sin}).
+На рис.~\ref{atu:f:vdp_id1_sin} представлені аналогічні результати, але
+в разі плавної зміни параметра~(\ref{atu:eq:po_t_sin}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -347,24 +354,23 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_sin})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ван-дер-Поля за умови (\ref{atu:eq:po_t_sin})}
 \label{atu:f:vdp_id1_sin}
 \end{figure}
 
-Ошибка идентификации в этом случае существенно меньше, при сохраняющихся
-колебаниях на начальном этапе.
+Помилка ідентифікації в цьому випадку істотно менше, також
+зберігаються коливання на початковому етапі.
 
 % }}}2
 
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Ван-дер-Поля}  % {{{2
+\subsection{Вплив параметрів системи ідентифікації на похибку ідентифікації для системи Ван-дер-Поля} % {{{2
 
-При идентификации системы Ван-дер-Поля
-с использованием критерия $q_T$
-влияние параметра $a_q$ представляет
-особый интерес, ввиду наличия двух уровней усреднения.
-Зависимости усреднённых ошибок идентификации
-от этого параметра представлены на  рис.~\ref{atu:f:vdp_e_a_q}.
+При ідентифікації системи Ван-дер-Поля з використанням критерію
+$q_T$ вплив параметра
+$a_q$ представляє особливий інтерес, зважаючи на наявність двох
+рівнів усереднення. Залежності усереднених помилок ідентифікації
+від цього параметра представлені на рис.~\ref{atu:f:vdp_e_a_q}.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -372,20 +378,20 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_a_q_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(a_q)$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(a_q)$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_a_q}
 \end{figure}
 
-Исходя из характерных значений ``периода'' можно было ожидать
-изменение характера этих зависимостей при $a_q \approx 0.1$.
-Однако, никаких существенных изменений на графиках не обнаружено.
-Сам вид этих зависимостей практически ничем, кроме масштаба,
-не отличается от таковых для уже рассмотренных систем.
-Таким образом получил подтверждение тезис о необходимости
-дополнительного усреднения на этом этапе.
+Виходячи з характерних значень ``періоду'' можна було б очікувати
+зміну характеру цих залежностей при
+$ a_q \approx 0.1 $. Однак, ніяких істотних змін на графіках не
+виявлено. Сам вигляд цих залежностей практично нічим, крім
+масштабу, не відрізняється від таких для вже розглянутих
+систем. Таким чином отримала підтвердження теза про необхідність
+додаткового усереднення на цьому етапі.
 
-Рассмотрим влияние ещё одного параметра системы идентификации --- $q_\gamma$.
-Соответствующие зависимости приведены на  рис.~\ref{atu:f:vdp_e_q_gamma}.
+Розглянемо вплив ще одного параметра системи ідентифікації ---
+$ q_\gamma $. Відповідні залежності наведені на рис.~\ref{atu:f:vdp_e_q_gamma}.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -393,25 +399,24 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_q_gamma_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(q_\gamma)$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(q_\gamma)$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_q_gamma}
 \end{figure}
 
-Используемая группа методов ``ql3rlWvnAAW'' характеризуется
-работоспособностью для широкого диапазона величины $q_\gamma$,
-за исключением области избыточной чувствительности,
-к которой поиск всё же возможен, но
-его диапазон ограничивается малой окрестностью агентов.
-Представленные графики полностью это подтверждают.
-Применение различных методов определения $p_\mathrm{id}$
-по разному себя проявляет в области заниженной чувствительности,
-но это различие мало.
+Використовувана група методів ``ql3rlWvnAAW'' характеризується
+працездатністю для широкого діапазону величини
+$ q_\gamma $, за винятком області надмірної чутливості, у
+якої пошук все ж можливий, але його діапазон обмежується
+малим околом агентів. Представлені графіки повністю це
+підтверджують. Застосування різних методів визначення
+$p_\mathrm{id} $ по різному себе проявляє в області заниженої
+чутливості, але ця різниця мала.
 
 
-Зависимости $\bar{e}(v_f)$ полученные при идентификации системы Ван-дер-Поля
-(рис.~\ref{atu:f:vdp_e_v_f}), демонстрируют
-существенную разницу при различных способах
-задания нестационарности  параметра.
+Залежності
+$ \bar{e} (v_f) $ отримані при ідентифікації системи Ван-дер-Поля
+(рис.~\ref{atu:f:vdp_e_v_f}), демонструють істотну різницю при різних
+способах завдання нестаціонарності параметра.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -419,30 +424,27 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_v_f_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(v_f)$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(v_f)$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_v_f}
 \end{figure}
 
-Если в динамике идентифицируемого параметра нет
-резких изменений (правый график), то
-зависимости имеют классический вид,
-существует такое значение $v_f$, при котором наблюдается
-минимум ошибки. В том же случае, когда зависимость представляет собой
-зависимость с разрывами (\ref{atu:eq:po_t_sign}),
-то зависимость получается слабая и неоднозначная.
-Это связано с тем, что перестройка положений агентов
-хоть и происходит, но не приводит к уменьшению ошибки
-ввиду того, что время реакции критерия становится одного порядка
-с временем реакции на изменение параметра.
+Якщо в динаміці ідентифікованого параметра немає різких змін
+(правий графік), то залежності мають класичний вигляд, тобто існує таке
+значення $ v_f $, при якому спостерігається мінімум похибки. У тому
+ж випадку, коли залежність являє собою залежність з
+розривами (\ref{atu:eq:po_t_sign}), то вплив стає слабким
+і неоднозначним. Це пов'язано з тим, що перебудова положень
+агентів хоч і відбувається, але не призводить до зменшення
+похибки з огляду на те, що час реакції критерію стає одного
+порядку з часом реакції на зміну параметра.
 
 
-Влияние коэффициента $k_e$ (рис.~\ref{atu:f:vdp_e_k_e})
-для данной системы также существенно зависит от динамики
-параметра, и по той же причине.
-Если динамика параметра задана как (\ref{atu:eq:po_t_sin}),
-то существует экстремум, соответствующий оптимальному распределению агентов.
-При скачкообразных изменениях параметра экстремум практически незаметен
-на общем фоне.
+Вплив коефіцієнта
+$ k_e $ (рис.~\ref{atu:f:vdp_e_k_e}) для даної системи також істотно залежить
+від динаміки параметра, і з тієї ж причини. Якщо динаміка
+параметра задана як (\ref{atu:eq:po_t_sin}), то існує екстремум, що
+відповідає оптимальному розподілу агентів. При стрибкоподібних
+змінах параметра екстремум практично непомітний на загальному рівні.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -450,18 +452,17 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_k_e_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_e)$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(k_e)$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_k_e}
 \end{figure}
 
-Влияние параметра $k_{nl}$ (рис.~\ref{atu:f:vdp_e_k_nl})
-отображает свойства множества агентов как ансамбля.
-В отличие от двух предыдущих зависимостей,
-минимум ошибки идентификации наблюдается для двух
-способов определения динамики параметров, то есть
-корректное взаимодействие между агентами необходимо
-для получения результата даже в тех случаях,
-когда собственно перемещение агентов не оправдано.
+Вплив параметра
+$ k_{nl} $ (рис.~\ref{atu:f:vdp_e_k_nl}) відображає властивості множини агентів
+як ансамблю. На відміну від двох попередніх залежностей, мінімум
+похибки ідентифікації спостерігається для двох способів
+визначення динаміки параметрів, тобто коректна взаємодія
+між агентами необхідна для отримання результату навіть в тих
+випадках, коли власне переміщення агентів не виправдано.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -469,14 +470,14 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_k_nl_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{nl})$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(k_{nl})$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_k_nl}
 \end{figure}
 
-Как и в предыдущем случае,
-искусственные ограничения на перемещения агентов
-практически нивелирует влияние коэффициента $k_{cl}$ (рис.~\ref{atu:f:vdp_e_k_cl}).
-В этих условиях силу $f_c$ имеет смысл вообще не определять.
+Як і в попередньому випадку, штучні обмеження на переміщення
+агентів практично нівелює вплив коефіцієнта
+$ k_{cl} $ (рис.~\ref{atu:f:vdp_e_k_cl}). У цих умовах силу
+$ f_c $ має сенс взагалі не визначати.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -484,52 +485,53 @@ $U_{in}$ идентификация возможна.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_k_cl_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{cl})$ для системы Ван-дер-Поля}
+  \caption{Залежності $\bar{e}(k_{cl})$ для системи Ван-дер-Поля}
 \label{atu:f:vdp_e_k_cl}
 \end{figure}
 
-На  рис.~\ref{atu:f:vdp_e_varepsilon_2} представлена зависимость ошибки идентификации
-от величины самого параметра $\varepsilon$ в условиях,
-когда постоянно чередуются хаотические и сложно-периодические режимы.
-В этих условиях ошибка идентификации возрастает,
-но сама система идентификации остаётся работоспособной.
+На рис.~\ref{atu:f:vdp_e_varepsilon_2} представлена залежність похибки
+ідентифікації від величини самого параметра
+$ \varepsilon $ в умовах, коли постійно чергуються хаотичні і
+складно-періодичні режими. У цих умовах похибка ідентифікації
+зростає, але сама система ідентифікації залишається
+працездатною.
 
 
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.60\textwidth]{p/cha/vdp/vdp_id2-p_p_e_ql3rlWvnAAW_scan.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(\varepsilon)$ для системы Ван-дер-Поля в условиях чередования режимов колебаний}
+  \caption{Залежності $\bar{e}(\varepsilon)$ для системи Ван-дер-Поля за умов чергування режимів коливань}
 \label{atu:f:vdp_e_varepsilon_2}
 \end{figure}
 
 % }}}2
 
-\subsection{Выводы}  % {{{2
+\subsection{Висновки}%{{{2
 
-Результаты моделирования
-процессов идентификации параметра ``$\varepsilon$''
-системы Ван-дер-Поля
-позволяют в сделать следующие выводы:
+Результати моделювання процесів ідентифікації параметра ``$\varepsilon$''
+системи Ван-дер-Поля дозволяють зробити наступні
+висновки:
 
 \begin{itemize}
 
   \item
-    Наибольший диапазон примерности для этой системы
-    демонстрирует критерий $q_T$ с последующим усреднением.
+    Найбільший діапазон зразковості для цієї системи демонструє
+    критерій $ q_T $ з наступним усередненням.
 
   \item
-    Не обнаружено критерия, который бы был работоспособен во всей
-    области определения параметров, в связи с разнообразием динамики,
-    которую проявляет система.
+    Не виявлено критерію, який би був працездатний у всій області
+    визначення параметрів, в зв'язку з різноманітністю динаміки,
+    яку проявляє система.
 
   \item
-    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность,
-    даже в условиях чередования режимов колебаний.
+    Група методів ql3rlWvnAAW показала свою хорошу працездатність,
+    навіть в умовах чергування режимів коливань.
 
   \item
-    Параметры самой системы идентификации могут изменяться в достаточно широких
-    пределах без существенного увеличения ошибки идентификации.
+    Параметри самої системи ідентифікації можуть змінюватися
+    в досить широких межах без істотного збільшення похибки
+    ідентифікації.
 
 \end{itemize}
 
